--- a/index.html
+++ b/index.html
@@ -67,7 +67,13 @@
     >
       <div class="container">
         <a
-          class="navbar-brand text-primary font-weight-bold js-scroll-trigger normal"
+          class="
+            navbar-brand
+            text-primary
+            font-weight-bold
+            js-scroll-trigger
+            normal
+          "
           href="#page-top"
           >ƤЄƤЄ ƑƖƝƛƝƇЄ
         </a>
@@ -118,7 +124,13 @@
         <canvas id="c"></canvas>
         <div class="h-100 row align-items-center justify-content-center">
           <div
-            class="row align-items-center justify-content-center text-center w-100"
+            class="
+              row
+              align-items-center
+              justify-content-center
+              text-center
+              w-100
+            "
           >
             <div class="col-lg-10 align-self-end">
               <h1 class="text-uppercase text-white font-weight-bold mb-4">
@@ -193,7 +205,7 @@
           >$PEPE, Presale Now!</a
         >
         <p class="formal text-white">
-          From: 14/5/2021 15:00 UTC,&nbsp;&nbsp;Until: 16/5/2021 15:00 UTC
+          From: 17/5/2021 15:00 UTC,&nbsp;&nbsp;Until: 19/5/2021 15:00 UTC
         </p>
       </div>
     </section>
@@ -243,6 +255,6 @@
       <script src="min/js/partner.min.js" async="true"></script>
     </section>
     <script src="min/js/footer.min.js" async="true"></script>
-    <script src="js/scripts.js"></script>
+    <script src="min/js/scripts.js"></script>
   </body>
 </html>
