--- a/presale.html
+++ b/presale.html
@@ -61,7 +61,6 @@
     <link href="min/css/p.min.css" rel="stylesheet" />
 
     <script src="min/js/duration.min.js"></script>
-    <script src="min/js/wallet.min.js" async></script>
   </head>
   <body>
     <nav
@@ -70,7 +69,13 @@
     >
       <div class="container">
         <a
-          class="navbar-brand text-primary font-weight-bold js-scroll-trigger normal"
+          class="
+            navbar-brand
+            text-primary
+            font-weight-bold
+            js-scroll-trigger
+            normal
+          "
           href="./index.html"
           >ƤЄƤЄ ƑƖƝƛƝƇЄ
         </a>
@@ -88,7 +93,13 @@
         <canvas id="c"></canvas>
         <div class="h-100 row align-items-center justify-content-center">
           <div
-            class="row align-items-center justify-content-center text-center w-100"
+            class="
+              row
+              align-items-center
+              justify-content-center
+              text-center
+              w-100
+            "
           >
             <div class="col-lg-10 align-self-end">
               <h1 class="text-uppercase text-white font-weight-bold mb-4">
@@ -100,7 +111,13 @@
               <img src="assets/Weewooeewooooo.gif" class="w-75" />
             </div>
             <div
-              class="col-lg-10 row align-items-streach justify-content-around presale-cell"
+              class="
+                col-lg-10
+                row
+                align-items-streach
+                justify-content-around
+                presale-cell
+              "
             >
               <div class="card col-lg-5 info"></div>
               <div class="card col-lg-5">
@@ -114,7 +131,12 @@
                   </div>
                   <div>
                     <div
-                      class="row align-items-center justify-content-between relative"
+                      class="
+                        row
+                        align-items-center
+                        justify-content-between
+                        relative
+                      "
                       style="margin-right: 0; margin-left: 0"
                     >
                       <div class="req-disable"></div>
@@ -139,7 +161,13 @@
                       </div>
                     </div>
                     <div
-                      class="row align-items-center justify-content-between relative mb-4"
+                      class="
+                        row
+                        align-items-center
+                        justify-content-between
+                        relative
+                        mb-4
+                      "
                       style="margin-right: 0; margin-left: 0"
                     >
                       <div class="req-disable"></div>
@@ -160,7 +188,12 @@
               </div>
             </div>
             <div class="col-lg-10 align-self-center mt-5">
-              <a href="#" class="btn btn-light">Any Question?</a>
+              <a
+                href="https://t.me/pepefinbscnews"
+                target="_blank"
+                class="btn btn-light"
+                >Any Question?</a
+              >
             </div>
           </div>
         </div>
@@ -170,4 +203,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/1.0.0/anime.min.js"></script>
     <script src="min/js/flow.min.js" async></script>
   </body>
+  <!-- <script src="min/js/wallet.min.js" async></script> -->
+  <script src="js/wallet.js" async></script>
 </html>
