--- a/index.html
+++ b/index.html
@@ -196,10 +196,10 @@
         </div>
       </div>
     </section>
-    <section class="page-section presale-now" style="background-color: #ec407a">
+    <section class="page-section" style="background-color: #ec407a">
       <div class="text-center">
         <a
-          class="text-white"
+          class="text-white presale-now"
           style="font-size: 4rem; text-decoration: underline"
           href="presale.html"
           >$PEPE, Presale Now!</a
