--- a/presale.html
+++ b/presale.html
@@ -204,5 +204,5 @@
     <script src="min/js/flow.min.js" async></script>
   </body>
   <!-- <script src="min/js/wallet.min.js" async></script> -->
-  <script src="js/wallet.js" async></script>
+  <script src="min/js/wallet.min.js" async></script>
 </html>
