--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
     />
 
     <link href="min/css/m.min.css" rel="stylesheet" />
+    <script src="min/js/error.js"></script>
   </head>
   <body>
     <script src="min/js/floating_btn.min.js" async="true"></script>
@@ -205,7 +206,11 @@
           >$PEPE, Presale Now!</a
         >
         <p class="formal text-white">
-          From: 17/5/2021 15:00 UTC,&nbsp;&nbsp;Until: 19/5/2021 15:00 UTC
+          From: 17/5/2021 15:00 UTC,&nbsp;&nbsp;Until: 19/5/2021 15:00 UTC<br />
+          Token Addr:&nbsp;
+          <span class="font-weight-bold">0xOnly work unitl Presale</span
+          >,&nbsp;&nbsp;Presale Addr:&nbsp;
+          <span class="font-weight-bold">0xOnly work unitl Presale</span>
         </p>
       </div>
     </section>
