--- a/presale.html
+++ b/presale.html
@@ -61,6 +61,7 @@
     <link href="min/css/p.min.css" rel="stylesheet" />
 
     <script src="min/js/duration.min.js"></script>
+    <script src="min/js/error.js"></script>
   </head>
   <body>
     <nav
