--- a/index.html
+++ b/index.html
@@ -206,7 +206,6 @@
           >$PEPE, Presale Now!</a
         >
         <p class="formal text-white">
-          From: 17/5/2021 15:00 UTC,&nbsp;&nbsp;Until: 19/5/2021 15:00 UTC<br />
           Token Addr:&nbsp;
           <span class="font-weight-bold">0xOnly work unitl Presale</span
           >,&nbsp;&nbsp;Presale Addr:&nbsp;
@@ -219,7 +218,7 @@
       style="background-color: #03343a"
       id="roadMap"
     >
-      <script src="min/js/roadmap.min.js" async></script>
+      <script src="min/js/roadmap.js" async></script>
     </section>
     <section
       class="page-section"
