--- a/index.html
+++ b/index.html
@@ -207,9 +207,12 @@
         >
         <p class="formal text-white">
           Token Addr:&nbsp;
-          <span class="font-weight-bold">0xOnly work unitl Presale</span
+          <span class="font-weight-bold"
+            >0x1bcb5a994a2b42a176de29033e1da6babd31a2d4</span
           >,&nbsp;&nbsp;Presale Addr:&nbsp;
-          <span class="font-weight-bold">0xOnly work unitl Presale</span>
+          <span class="font-weight-bold"
+            >0xCB4FE28357333f0E3ffAfd48A6dCd147CE3416c2</span
+          >
         </p>
       </div>
     </section>
