--- a/upgrade.html
+++ b/upgrade.html
@@ -142,6 +142,13 @@
           </div>
           <p>Fix several bugs; delete test code</p>
         </li>
+        <li class="list-group-item">
+          <div class="d-flex w-100 justify-content-between">
+            <h5>0.8.0</h5>
+            <small>2021-05-21 06:36:35Z</small>
+          </div>
+          <p>Presale Now!</p>
+        </li>
       </ul>
     </div>
   </body>
